--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Ethereum block explorer for a given range of blocks",
   "main": "cli.js",
   "scripts": {
-    "test": "jasmine"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,8 @@
     "web3": "^1.0.0-beta.35"
   },
   "devDependencies": {
-    "jasmine": "^3.2.0"
+    "chai": "^4.1.2",
+    "jasmine": "^3.2.0",
+    "mocha": "^5.2.0"
   }
 }
